# featureform

./: .air.toml  .bazelrc  .coverage.Sterlings-MacBook-Pro-2.local.36539.594815  .coveragerc  .dockerignore  .env-template  .gitbook.yaml  .gitbooks.yaml  .gitignore  .pre-commit-config.yaml  .readme_mlc_config.json  404.html  BUILD  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.WindowsDebug  Dockerfile.update  Dockerfile.worker  Dockerfile.yarn  Dockerfile2  EMBEDDING_STORE.md  Makefile  README  README.md  WORKSPACE  build_containers.sh  build_metadata_docker.sh  build_run_dash_prom.bash  canvass_queries.py  check_coverage_mac.sh  codecov.yaml  codecov.yml  conf.py  conftest.py  coverage.out  db.py  definitions.py  defs.py  (+50 more)
.github/: README.md
.husky/: pre-commit
api/: Dockerfile  README.md  api.go  http_test.go  main.go  main_test.go  resolver.go
autogenerated_variants/: index.html
backup/: Dockerfile  README.md  backup.go  backup_test.go  create_secret.py  dest.json.attrs  providers.go  providers_test.go  requirements.txt  secret_template.yaml
benchmark/: data_generator.py  register_features.py  serve_benchmark.py  serving.py
benchmarking/: benchmark.py
charts/: README.md  featureform-1.0.0.tgz  index.yaml
cli/: index.html
client/: .coveragerc  BUILD  MANIFEST.in  README.md  __init__.py  client.py  doc-requirements.txt  embeddinghub.py  embeddingstore.py  gen_pages.py  index.html  mkdocs.yml  pyproject.toml  repl.py  setup.cfg
client/docs/: autogenerated_variants.md  cli.md  client.md  client_apply.md  compatibility.md  deployment_overview.md  enums.md  features.md  get.md  index.md  installation.md  local.md  model_registration.md  on_demand_functions.md  primary_sources.md  properties_and_tags.md  provider_reuse.md  provider_updating.md  providers.md  register.md  resource_client.md  serve.md  source_reuse.md  sources.md  training_sets.md  transformations.md  welcome.md
client/docs/stylesheets/: extra.css
client/examples/: cli.py  local_quickstart.py  local_quickstart_get.py  local_serving.py  quickstart.py  quickstart_get.py  register.py  serve.py
client/examples/example_dir/: quickstart.py  serve_features.py
client/site/: .md  404.html  index.html  objects.inv  sitemap.xml
client/site/client/: index.html
client/site/resource_client/: index.html
client/site/search/: search_index.json
client/src/.featureform/SQLiteDB/: metadata.db
client/src/featureform/: __init__.py  __main__.py  cli.py  cli_test.py  cli_test_2.py  client.py  client_test.py  constants.py  dashboard_metadata.py  db.py  deploy.py  enums.py  errors.py  exceptions.py  feature_flag.py  file_utils.py  format.py  get.py  get_local.py  get_test.py  grpc.py  grpc_client.py  list.py  list_local.py  list_test.py  local.py  local_cache.py  local_dash_test.py  local_test.py  local_utils.py  logging.py  marshall_test.py  metadata.py  metadata_repository.py  metadata_respository.py  names_generator.py  online.py  parse.py  providers.py  register.py  (+23 more)
client/src/featureform/.featureform/SQLiteDB/: metadata.db
client/src/featureform/lib/: validation.py  validator.py
client/src/featureform/proto/: metadata.proto
client/src/featureform/providers/: __init__.py  credentials.py  filestore.py  online_store.py  pinecone.py  providers.py  weaviate.py
client/src/featureform/providers/configs/: filestores.py  vectordbs.py
client/src/grpc/: grpc_client.py
client/tests/: conftest.py  connection_test.py  e2e.py  get_provider_test.py  get_status_test.py  get_test.py  list_test.py  local_dash_test.py  local_test.py  localmode.py  localmode_cases.py  localmode_quickstart_test.py  print_resource_test.py  provider.py  provider_config_test.py  pytest.ini  quickstart.py  redefined_test.py  register_provider_test.py  register_test.py  resources_test.py  serving_cases.py  serving_test.py  status_test.py  test_autogenerated_variants.py  test_canonicalize_function_definition.py  test_class_api.py  test_cli.py  test_client.py  test_delete.py  test_deploy.py  test_enums.py  test_executor_resources.py  test_getting_model.py  test_localmode_cache.py  test_localmode_caching.py  test_localmode_include_label_ts.py  test_localmode_lag_features.py  test_metadata.py  test_metadata_repository.py  (+26 more)
client/tests/test_files/input_files/: input_transactions.csv  lag_features_testing.csv  transactions.parquet  transations.jsonl
client/tests/test_files/input_files/readable_directory/: c.txt
client/tests/test_files/yarn_files/: core-site.xml
client_apply/: index.html
colab_tutorial/: Fraud_Detection_Example.ipynb
config/: config.go
ff/serving/client/: cli.py  metadata_pb2.py  metadata_pb2_grpc.py  register.py  register_test.py  resources.py  resources_test.py  setup.cfg  test_import.py
ff/serving/client/examples/: cli.py  register.py
ff/serving/client/src/featureform/: __init__.py  cli.py  register.py  resources.py  resources_test.py  serving.py
ff/serving/client/src/featureform/proto/: metadata.proto
ff/serving/client/test/: test.py
ff/serving/client/tests/: conftest.py  connection_test.py
(+2118 files in other folders)
