[metadata]
name = featureform
version = 1.0.5
author = FeatureForm, Inc.
author_email = hello@featureform.com
description = Package for the Featureform Feature Store
long_description = file: README.md
long_description_content_type = text/markdown
url = https://featureform.com
project_urls =
    Bug Tracker = https://github.com/featureform/embeddinghub/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
# Known compatibility bug with grpcio and python 3.10 on M1 Macs
python_requires = >=3.6, <3.10
install_requires =
    click==8.1.3
    protobuf==3.20.1
    typeguard==2.13.3
    grpcio==1.46.1
    numpy==1.22.3

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    featureform = featureform.cli:cli

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]