[metadata]
name = featureform
version = 0.0.0
author = FeatureForm, Inc.
author_email = hello@featureform.com
description = Package for the Featureform Feature Store
long_description = file: README.md
long_description_content_type = text/markdown
url = https://featureform.com
project_urls =
    Bug Tracker = https://github.com/featureform/embeddinghub/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
# Known compatibility bug with grpcio and python 3.10 on M1 Macs
python_requires = >=3.7
install_requires =
    click==8.1.3
    protobuf==4.21.2
    typeguard==2.13.3
    grpcio==1.47.0
    numpy==1.21.6
    pandas==1.3.5
    typing_extensions==4.3.0
    dataclasses==0.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    featureform = featureform.cli:cli

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]