[metadata]
name = featureform
version = 0.0.0
author = FeatureForm, Inc.
author_email = hello@featureform.com
description = Package for the Featureform Feature Store
long_description = file: README.md
long_description_content_type = text/markdown
url = https://featureform.com
project_urls =
    Bug Tracker = https://github.com/featureform/embeddinghub/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Operating System :: OS Independent

[options]
include_package_data = True
package_dir =
    = src
packages = find:
# Known compatibility bug with grpcio and python 3.10 on M1 Macs
python_requires = >=3.7
install_requires =
    click>=7.1.2
    protobuf>=3.17.3
    typeguard>=2.7.1
    grpcio==1.47.0
    numpy==1.21.6
    pandas==1.3.5
    pandasql>=0.7.3
    typing_extensions>=4.1.1
    dataclasses==0.6
    flask==2.2.1
    Flask-Cors==3.0.10
    pyspark>=3.3.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    featureform = featureform.cli:cli

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]
