[metadata]
name = featureform
version = 0.0.1
author = Featureform Inc
author_email = author@example.com
description = CLI Package for the Featureform Feature Store
long_description = file: README.md
long_description_content_type = text/markdown
url = https://featureform.com
project_urls =
    Bug Tracker = https://github.com/featureform/embeddinghub/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    featureform = featureform.cli:cli

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]